refactor: address review feedback
Applies to the list element block the review comments of the sibling
element cascade pull request.

The single-field ListElementBlock record becomes a plain Class<?> component
of GraphStructureAndDirection. Inverse sources are resolved through
VariableSourceReference#downstreamDeclarativeVariableMetamodel instead of
indexing into the reference list, the element sources switch enumerates every
ParentVariableType instead of a catch-all default, the walk direction is
compared explicitly, and the alignment key rejections happen in the
classification loop that already visits every descriptor.

The factory splits the descriptors once, producing the list entity's
descriptor and its direct post-chain variables in the same pass, and no longer
guards against a list entity without declarative shadow variables, which the
detection already rejects. Block edges are looked up with the new
lookupOrNull, since an extended model may declare a variable on a subclass
only. Comments state the mechanism they rely on: what marks the block nodes
at construction, why the range is only recorded on the after event, and why
a structural change marks the post-chain variables.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>