@@ -1,6 +1,5 @@
 package ai.timefold.solver.core.impl.domain.variable.declarative;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -55,7 +54,7 @@ public enum GraphStructure {
     private static final Logger LOGGER = LoggerFactory.getLogger(GraphStructure.class);
 
     /**
-     * When present, the planning list variable's elements are excluded from the variable
+     * When {@code blockedElementClass} is non-null, the planning list variable's elements are excluded from the variable
      * reference graph, which covers the other entity classes with per-variable nodes.
      * Each list entity additionally gets a single block node representing its whole chain
      * of elements, ordered after the entity's pre-chain variables (which the elements read
@@ -66,13 +65,10 @@ public enum GraphStructure {
      * through their inverse, pre-chain declarative variables of their own list entity,
      * and because the other classes only reach the elements through the list variable itself.
      */
-    public record ListElementBlock(Class<?> elementEntityClass) {
-    }
-
     public record GraphStructureAndDirection(GraphStructure structure,
             @Nullable VariableMetaModel<?, ?, ?> parentMetaModel,
             @Nullable ParentVariableType direction,
-            @Nullable ListElementBlock listElementBlock) {
+            @Nullable Class<?> blockedElementClass) {
 
         public GraphStructureAndDirection(GraphStructure structure,
                 @Nullable VariableMetaModel<?, ?, ?> parentMetaModel,
@@ -92,7 +88,7 @@ public enum GraphStructure {
 
         var blockAndDirection = determineListElementBlock(solutionDescriptor, declarativeShadowVariableDescriptors);
         if (blockAndDirection != null) {
-            var elementEntityClass = blockAndDirection.listElementBlock().elementEntityClass();
+            var elementEntityClass = blockAndDirection.elementEntityClass();
             var innerDescriptors = declarativeShadowVariableDescriptors.stream()
                     .filter(descriptor -> !elementEntityClass
                             .isAssignableFrom(descriptor.getEntityDescriptor().getEntityClass()))
@@ -101,7 +97,7 @@ public enum GraphStructure {
             return new GraphStructureAndDirection(innerStructure.structure(),
                     blockAndDirection.parentMetaModel(),
                     blockAndDirection.direction(),
-                    blockAndDirection.listElementBlock());
+                    elementEntityClass);
         }
         return determineGraphStructure(declarativeShadowVariableDescriptors, null, entities);
     }
@@ -190,14 +186,15 @@ public enum GraphStructure {
         }
     }
 
-    private record ListElementBlockAndDirection(ListElementBlock listElementBlock,
+    private record ListElementBlockAndDirection(Class<?> elementEntityClass,
             VariableMetaModel<?, ?, ?> parentMetaModel,
             ParentVariableType direction) {
     }
 
     /**
      * Non-null if the planning list variable's elements can be excluded from the variable
-     * reference graph and represented by a per-entity block node instead; see {@link ListElementBlock}.
+     * reference graph and represented by a per-entity block node instead;
+     * see {@link GraphStructureAndDirection#blockedElementClass()}.
      * Only the element class's sources and the references towards the element class are
      * checked here: the rest of the model is covered by the graph, whatever its structure.
      */
@@ -216,13 +213,15 @@ public enum GraphStructure {
             for (var source : descriptor.getSources()) {
                 var parentVariableType = source.parentVariableType();
                 if (parentVariableType == ParentVariableType.PREVIOUS || parentVariableType == ParentVariableType.NEXT) {
-                    var sourceParentMetaModel = source.variableSourceReferences().get(0).variableMetaModel();
+                    var sourceParentMetaModel = source.variableSourceReferences().getFirst().variableMetaModel();
                     if (parentMetaModel == null) {
                         parentMetaModel = sourceParentMetaModel;
                         direction = parentVariableType;
                         // The class declaring the directional parent, so extended element classes are covered.
                         elementEntityClass = sourceParentMetaModel.entity().type();
-                    } else if (!parentMetaModel.equals(sourceParentMetaModel)) {
+                    } else if (!parentMetaModel.equals(sourceParentMetaModel)
+                            || direction != parentVariableType) {
+                        // The block node walks each list in a single direction.
                         return null;
                     }
                 }
@@ -239,13 +238,16 @@ public enum GraphStructure {
             // so the element class must cover the list's elements and be distinct from the list entity.
             return null;
         }
-        var elementDescriptorList = new ArrayList<DeclarativeShadowVariableDescriptor<Solution_>>();
         var hasNonElementDescriptors = false;
         var hasOwnerDescriptors = false;
         for (var descriptor : declarativeShadowVariableDescriptors) {
             var entityClass = descriptor.getEntityDescriptor().getEntityClass();
             if (elementEntityClass.isAssignableFrom(entityClass)) {
-                elementDescriptorList.add(descriptor);
+                if (descriptor.getAlignmentKeyMap() != null) {
+                    // The block node walks one chain at a time,
+                    // which an alignment key's grouped updater contradicts.
+                    return null;
+                }
             } else if (entityClass.isAssignableFrom(elementEntityClass)) {
                 // A declarative superclass of the elements would be entangled with the block.
                 return null;
@@ -270,11 +272,6 @@ public enum GraphStructure {
             // which only exists when the list entity has declarative shadow variables of its own.
             return null;
         }
-        var hasElementAlignmentKey = elementDescriptorList.stream()
-                .anyMatch(descriptor -> descriptor.getAlignmentKeyMap() != null);
-        if (hasElementAlignmentKey) {
-            return null;
-        }
         var postChainVariableSet = computePostChainVariables(declarativeShadowVariableDescriptors, elementEntityClass);
         for (var descriptor : declarativeShadowVariableDescriptors) {
             var isElementSource = elementEntityClass.isAssignableFrom(descriptor.getEntityDescriptor().getEntityClass());
@@ -297,14 +294,14 @@ public enum GraphStructure {
                             // Only safe when it targets a pre-chain declarative variable of the list
                             // entity: post-chain variables depend on the chain itself, which would
                             // require a cycle through the block node.
-                            var references = variableSource.variableSourceReferences();
-                            if (references.size() < 2
-                                    || !references.get(1).isDeclarative()
-                                    || postChainVariableSet.contains(references.get(1).variableMetaModel())) {
+                            var inverseTarget = variableSource.variableSourceReferences().getFirst()
+                                    .downstreamDeclarativeVariableMetamodel();
+                            if (inverseTarget == null || postChainVariableSet.contains(inverseTarget)) {
                                 return null;
                             }
                         }
-                        default -> {
+                        case VARIABLE, INDIRECT, GROUP, LIST_ELEMENT -> {
+                            // An element reached any other way would have to be part of the graph.
                             return null;
                         }
                     }
@@ -312,7 +309,7 @@ public enum GraphStructure {
                     // Only safe when it accesses the list's own elements directly:
                     // an entity reached through an element's fact may belong to another list,
                     // whose changes would not recompute this variable.
-                    var reference = variableSource.variableSourceReferences().get(0);
+                    var reference = variableSource.variableSourceReferences().getFirst();
                     if (!reference.chainFromRootEntityToVariableEntity().isEmpty()) {
                         return null;
                     }
@@ -326,7 +323,7 @@ public enum GraphStructure {
                 }
             }
         }
-        return new ListElementBlockAndDirection(new ListElementBlock(elementEntityClass), parentMetaModel, direction);
+        return new ListElementBlockAndDirection(elementEntityClass, parentMetaModel, direction);
     }
 
     /**
